deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: organic-app-deployment 
spec: 
  replicas: 3
  selector:
    matchLabels:
      web: organic
  template:
    metadata:
      labels:
        web: organic 
    spec: 
      containers:
        - image: muralisocial123/cart-page-test:1.0
          name: sample-organic 
          ports:
            - containerPort: 3000
