emptydir-volume.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: empty-dir-pod 
spec:
  restartPolicy: Never
  containers:
    - image: busybox
      name: busybox1 
      command: ['sh','-c','while true;do eacho Sucess!! > /output/output.txt;sleep 5;done']
      volumeMounts:
        - name: my-volume
          mountPath: /output
    - image: busybox
      name: busybox2 
      command: ['sh','-c','while true;do cat /input/output.txt > /output/output.txt;sleep 5;done'] 
      volumeMounts:
        - name: my-volume 
          mountPath: /input          
  volumes:
    - name: my-volume
      emptyDir: {}
