secret-pod.yaml
apiVersion: v1 
kind: Pod 
metadata:
  name: env-pod 
spec:
  containers:
    - image: busybox 
      name: busybox 
      command: ['sh', '-c', 'while true; do echo configmap is : $CONFIGMAPVAR and secret is $SECRETVAR; sleep 10; done ']
