organic-Deployment.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: example-app-deployment 
spec: 
  replicas: 1
  selector:
    matchLabels:
      web: example
  template:
    metadata:
      labels:
        web: example 
    spec: 
      containers:
        - image: muralisocial123/organic-app-web:latest
          name: example-organic 
          ports:
            - containerPort: 5656
---
apiVersion: v1 
kind: Service
metadata:
  name: example-organic-svc
spec:
  selector:
    web: example
  ports:
  - port: 5657 # Service Port or Host Port on which port number you are going access the application
    targetPort: 5656 # On Which Port Number the application is going to working 
    protocol: TCP 
  type: NodePort
