transcation-deployment.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: transcation-deployment
spec:
  selector:
    matchLabels:
      app: trans
  template:
    metadata:
      labels:
        app: trans
    spec:
      containers:
      - name: trans-cont
        image: muralisocial123/bank-app-transcation:latest
        ports:
        - containerPort: 3000
---
apiVersion: v1 
kind: Service
metadata:
  name: transcation-deployment-svc 
spec:
  selector:
    app: trans
  ports:
  - port: 3003
    targetPort: 3000
    protocol: TCP
  type: ClusterIP
