ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$3
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /cart(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: cart-page-svc
            port:
              number: 3002
      - path: /organic(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: example-organic-svc
            port:
              number: 5657   
      - path: /organic(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: example-organic-svc
            port:
              number: 5657   
      - path: /trans(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: transcation-deployment-svc
            port:
              number: 3003
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: example-organic-svc
            port:
              number: 5657
